feat(common): functionality for java app